[package]
name = "stm103"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { features = ["unproven"], version = "0.2.7" }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rtic = "1.1.4"
systick-monotonic = "1.0.1"
nb = "1"
bitflags = "2.2.1"
bytemuck = "1.13.1"
defmt = "1"
defmt-rtt = "1.1.0"
panic-probe = "1.0.0"

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["stm32f103", "rt"]

[profile.release]
lto = true
debug = 2